<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".viewUI.SecondFragment">


    <TextView
        android:id="@+id/tvPlantSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_plant_selected"
        android:textAlignment="center"
        android:textColor="@color/primary_variant"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePlantSelected"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlantSelected"
        tools:background="@color/surface"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_plant"
        android:textColor="@color/primary_variant"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePlantSelected" />

    <TextView
        android:id="@+id/tvTypeSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:text="@string/tv_type_select"
        android:textColor="@color/primary_variant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTypePlant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlant" />

    <TextView
        android:id="@+id/tvTypePlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_type"
        android:textColor="@color/primary_variant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvTypeSelect"
        app:layout_constraintTop_toBottomOf="@+id/tvPlant" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="227dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/secondary_variant"
        android:text="@string/description_plant"
        android:textColor="@color/primary_variant"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTypePlant" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/primary_variant"
        android:text="@string/btn_back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSendEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/primary_variant"
        android:text="@string/btn_send_mail"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>